 0.8... Remove defunct speak functionality

 0.7.3  Issue #9 - Scanners with 'word_list' resolutions
        Fix spinner viability on searching for scanners.
        Issue #10 - Scan images display is not permission checked

 0.7.2  Remove the de-skew functionality
        Improve OCR operations accuracy
        Allow documents to be opened full screen
        Revamp doc list and filter functionality

 0.7.1  Added an "ideas" link and fixed typos/spelling error, on the application homepage.
        Removed the dependency on glib
        Moved around the doclist page to better show fix vs. user defined, options
        Added new admin app to easily set config options
        Improved the selection and assignment of tags

 0.7.0  Fix an issue with bad setting of SANE options. (some user could not set the resolution)
        Added language selection for OCR operations
        Fix install problem if installation is already found
        Improved build instructions
        Fix build problem on Fedora
        Layed the groundwork for device locking
        Various tidy-ups
        Unified the backed response structure and defined an API
        Added direct API calls examples

*0.6.5  Fix for scanners with "word_list" resolution options

*0.6.4  Fix warnings at compile time

*0.6.3  Improve the build process

 0.6.2  Fixes to help get into debian repo
        Ensure we can compile with various 'optional' libs are missing.

 0.6.1  Fixes and better testing

*0.6    Second major public release (first in web format)
        Rationalise and fix scanning code
        Various fixed make durring testing

 0.5.16 Fixes and change ocr default to on

 0.5.15 finish file import

 0.5.14 Update to loggin
        chage the default URL to start "/opendias/" to allow the use of webserver no port proxying

 0.5.13 Better Daemon setup

 0.5.12 make it daemonisable

 0.5.11 more on: uploading files, admin of access controls, ui improvements, more...

 0.5.10 More ui improvements
