@@ -51,7 +51,10 @@ extern int updateDocValue_int (char *, char *, int);
 extern int updateDocValue (char *, char *, char *);
 extern int addTagToDoc (char *, char *);
 extern int removeTagFromDoc (char *, char *);
+extern int addDocToDoc (char *, char *);
+extern int removeDocFromDoc (char *, char *);
 extern void removeDocTags (char *);
+extern void removeDocLinks (char *);
 extern void removeDoc (char *);
 extern void addLocation(char *, int);
 extern char *getTagId(char *);
