@@ -77,6 +77,17 @@
     </div>
   </div>
 
+  <div class='row'>
+    <div class='label'>Linked Docs:</div>
+    <div class='data'>
+      <div id="doclinks_tagsinput" class="tagsinput" style="width: 300px; ">
+        <div id="doclinks_addTag"><input id="doclinks_tag" value="" data-default="pick a document" style="color: rgb(102, 102, 102); " class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></div>
+        <div class="tags_clear"></div>
+      </div>
+
+    </div>
+  </div>
+
 </div>
 
 <script type="text/javascript" src="/opendias/includes/openDias.saveDetails.js"></script>
