@@ -1,4 +1,5 @@
  0.8... Remove defunct speak functionality
+        Implement Issue #7 - Document Linkage
 
  0.7.3  Issue #9 - Scanners with 'word_list' resolutions
         Fix spinner viability on searching for scanners.
